<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KeyBlocker</string>
    <string name="attention">Please open Settings-AccessibilityService-KeyBlocker to use it.\nRestart this Service may solve problems when control panel can not work.</string>
    <string name="introduce">This application can help you block all your physical keys.\nExcept the power button!\nYou can close it by Notification, Widget or TileQuickSetting(Android N)!</string>
    <string name="tile_set">Above Android N Devices default open your Status Bar and enable the Tile to control KeyBlocker!</string>
    <string name="go_start">Click Here to Start</string>
    <string name="disabled_volume_key">Not Block Volume Button</string>
    <string name="force_notification_control">Force Notification Control</string>
    <string name="notify_mes_on">Click Here to Open KeyBlocker</string>
    <string name="notify_mes_off">Click Here to Close KeyBlocker</string>
    <string name="restart_service">Restart AccessibilityService to apply</string>
    <string name="start_service_first">Please Run AccessibilityService First!</string>
    <string name="author">Made By XFY9326,frowhy\nOpenSource:https://github.com/XFY9326/KeyBlocker</string>
    <string name="test_keycode">Test KeyCode</string>
    <string name="test_keycode_sum">Get the number of the key you use(KeyCode)</string>
    <string name="enabled_custom">Enabled custom KeyCode</string>
    <string name="enabled_custom_describe">Only block special custom buttons</string>
    <string name="custom_setting">Custom KeyCode Block Settings</string>
    <string name="has_enabled">Has Enabled</string>
    <string name="has_disabled">Has Disabled</string>
    <string name="spaces_separate">Input and use spaces to separate them</string>
    <string name="access_entry">Access Entry</string>
    <string name="root">Use Root Function</string>
    <string name="root_failed">Root failed</string>
    <string name="root_describe">It is powerful but unstable and reboot may fix problems causing by this</string>
    <string name="show_notification_icon">Show Notification Icon</string>
    <string name="allow_remove_notification">Allow to remove notification "block is off"</string>
    <string name="allow_remove_notification_sum">Will also close AccessibilityService(Only work on Android N device or using root functions)</string>
    <string name="button_vibrate_light_control">Block Button vibrate and light</string>
    <string name="button_vibrate_light_control_sum">May cause problems in some devices, reboot may fix these problems.</string>
    <string name="auto_close_statusbar">Auto close Status Bar when using Tile</string>
    <string name="button_blocked">Button is blocked</string>
    <string name="button_unblocked">Button is unblocked now</string>
    <string name="vibrate_warn">Some System do not support it!\n\nIf you use this function, all vibrate will be blocked unless you do not block your keys!\n\nWe suggest you setting button vibrate in System Settings instead of using this!</string>
    <string name="access_entry_use">Remote call broadcast:\n tool.xfy9326.keyblocker.action.REMOTE_CONTROL_ACTION\n\nAvailable parameters:\nBoolean value RESPOND\nPromote when AccessibilityService is not open.(Default true)</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading…</string>
    <string name="continue_do">Continue</string>
    <string name="help">Help</string>
    <string name="wrong_format">Wrong Format</string>
    <string name="setting">KeyBlock Settings</string>
    <string name="keyblock_activity">Custom KeyBlock Applications</string>
    <string name="keyblock_activity_describe">Block keys automatically in custom applications.</string>
    <string name="keyblock_activity_settings">KeyBlock Applications set</string>
    <string name="keyblock_close_control_notification">Close control notification</string>
    <string name="keyblock_close_control_notification_describe">Will not notify when you are doing everything.</string>
    <string name="xml_general_settings">General Settings</string>
    <string name="xml_notify_settings">Notification Settings</string>
    <string name="xml_custom_settings">Custom Settings</string>
    <string name="xml_root_settings">Root Settings</string>
    <string name="xml_tile_settings">Tile Settings</string>
    <string name="xml_tile_settings_sum">Only can be use in Android N and above.</string>
    <string name="widget_description">KeyBlocker Switch</string>
    <string name="xml_keyblock_application">KeyBlock Application Settings</string>
    <string name="keyblock_activity_filter_describe">Will not show applications without activities, may have some problems but can save device memory.</string>
    <string name="keyblock_activity_filter">KeyBlock Application Filter</string>
    <string name="force_notification_control_describe">To solve some device which can not use Tile</string>
    <string name="xml_root_open_service">Open Accessibility Service with root</string>
    <string name="xml_root_open_service_sum">It may not work for the first time (restart service manually to solve it)and is awkward</string>
    <string name="warn_service_started">The Service has already started!</string>
    <string name="close_service">Click Here to Close</string>
    <string name="double_click_cancel_block">Double click exit</string>
    <string name="double_click_cancel_block_sum">Double click back button to unblock key</string>
    <string name="disabled_volume_key_more_sum">You can also manually set more in custom settings</string>
    <string name="xml_root_scan_activity">Use Root scan the application you are using</string>
    <string name="xml_root_scan_activity_sum">More accurate but use more battery\nCan solve the application block is not timely.</string>
    <string name="shortcut_disabled">This ShortCut is disabled!</string>
    <string name="keyblock_activity_settings_sum">Select Applications in a list. (Check package name)</string>
    <string name="keyblock_activity_settings_text_sum">Set KeyBlock by Activity key words. (Check activity name)</string>
    <string name="keyblock_activity_settings_text">KeyBlock Activity key words settings</string>
    <string name="warn_custom_block">Please input KeyCode Numbers!</string>
    <string name="keyblock_activity_test">Test Activity Name</string>
    <string name="keyblock_activity_test_sum">Show the name of the activity you are using.</string>
    <string name="keyblock_activity_advanced_scan_mode">Package name advanced scan mode</string>
    <string name="keyblock_activity_advanced_scan_mode_sum">Using initiative scan mode but also using more power.\nCan solve the application block is not timely.</string>
    <string name="keyblock_activity_advanced_scan_mode_warn">May cause problems, not work and only can get package name in Android 5.1 and above.\n\nAndroid 5.1 and above will disable "KeyBlock Activity key words settings" function and must give read phone state permission!\n\nWill use root function first!</string>
    <string name="warn_no_permission">No Permission!</string>
    <string name="xml_base_settings">Basic Settings</string>
    <string name="xml_advanced_settings">Advanced Settings</string>
    <string name="xml_custom_settings_sum">Block the key you want.</string>
    <string name="xml_general_settings_sum">Base settings and control.</string>
    <string name="xml_keyblock_application_sum">Block keys automatically in different applications.</string>
    <string name="xml_root_settings_sum">Using root and can use more powerful functions.</string>
    <string name="xml_notify_settings_sum">Open or close notification and other functions.</string>
    <string name="recent_block_remember">Remember one recent block application</string>
    <string name="recent_block_remember_sum">Remember an application when block manually and it will be blocked next time.</string>
    <string name="xml_general_settings_no_advanced_function">Close all advanced functions</string>
    <string name="xml_general_settings_no_advanced_function_sum">Only use simple block function and save power.\nExcept functions about control!</string>
    <string name="notification_control_board">KeyBlocker Control Board</string>
</resources>
