<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="15dp"
    android:paddingTop="15dp">

    <EditText
        android:id="@+id/et_custom_keycode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:ems="10"
        android:hint="@string/spaces_separate"
        android:inputType="text"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_cancel"
        style="@android:style/Widget.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/btn_submit"
        android:layout_below="@+id/et_custom_keycode"
        android:layout_toLeftOf="@+id/btn_submit"
        android:layout_toStartOf="@+id/btn_submit"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/btn_submit"
        style="@android:style/Widget.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/et_custom_keycode"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/submit" />

</RelativeLayout>